2019-07-11  Jonathan Wakely  <jwakely@redhat.com>

	* doc/xml/manual/configure.xml: Improve documentation of
	--enable-libstdcxx-time option.

	* include/bits/atomic_base.h (__atomic_impl): New namespace for
	wrappers around atomic built-ins.
	(__atomic_float, __atomic_ref): New class templates for use as base
	classes.
	* include/std/atomic (atomic<float>, atomic<double>)
	(atomic<long double>): New explicit specializations.
	(atomic_ref): New class template.
	(__cpp_lib_atomic_ref): Define.
	* include/std/version (__cpp_lib_atomic_ref): Define.
	* testsuite/29_atomics/atomic/60695.cc: Adjust dg-error.
	* testsuite/29_atomics/atomic_float/1.cc: New test.
	* testsuite/29_atomics/atomic_float/requirements.cc: New test.
	* testsuite/29_atomics/atomic_ref/deduction.cc: New test.
	* testsuite/29_atomics/atomic_ref/float.cc: New test.
	* testsuite/29_atomics/atomic_ref/generic.cc: New test.
	* testsuite/29_atomics/atomic_ref/integral.cc: New test.
	* testsuite/29_atomics/atomic_ref/pointer.cc: New test.
	* testsuite/29_atomics/atomic_ref/requirements.cc: New test.

2019-07-06  Jonathan Wakely  <jwakely@redhat.com>

	* include/ext/atomicity.h (__exchange_and_add, __atomic_add): Replace
	throw() with _GLIBCXX_NOTHROW.
	(__atomic_add_dispatch): Return after performing atomic increment.

2019-07-05  Jonathan Wakely  <jwakely@redhat.com>

	* include/ext/atomicity.h [_GLIBCXX_ATOMIC_BUILTINS] (__atomic_add)
	(__exchange_and_add): Replace static specifier with always_inline
	attribute.
	(__exchange_and_add_single, __atomic_add_single): Likewise.
	(__exchange_and_add_dispatch, __atomic_add_dispatch): Likewise. Also
	combine !__gthread_active_p() and !__GTHREADS branches.

2019-07-03  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/91067
	* acinclude.m4 (libtool_VERSION): Bump to 6:27:0.
	* configure: Regenerate.
	* config/abi/pre/gnu.ver (GLIBCXX_3.4.27): Add new version. Export
	missing symbols.
	* testsuite/27_io/filesystem/iterators/91067.cc: New test.